unpackaged/main/default/objects/sfsp__AttainmentPlan__c/sfsp__AttainmentPlan__c.object-meta.xml
<CustomObject>
    <label>Attainment Plan</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attainment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>