unpackaged/main/default/objects/sfsp__AttainmentPlan__c/fields/sfsp__Quota_Month11__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Quota_Month11__c</fullName>
    <label>Quota Month 11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>