unpackaged/main/default/objects/sfsp__AttainmentPlan__c/fields/sfsp__Quota_Month12__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Quota_Month12__c</fullName>
    <label>Quota Month 12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>