unpackaged/main/default/objects/sfsp__AttainmentPlan__c/fields/sfsp__Strategy__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Strategy__c</fullName>
    <label>Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>