unpackaged/main/default/objects/sfsp__AttainmentPlan__c/fields/sfsp__User__c.field-meta.xml
<CustomField>
    <fullName>sfsp__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for which this plan was created</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AttainmentPlans</relationshipName>
    <type>Lookup</type>
</CustomField>